--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.4.4",
     "@supabase/supabase-js": "^2.23.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "20.2.3",
